--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
 
 <header>
-  <img src="https://raw.githubusercontent.com/seu-usuario/seu-repositorio/main/756b2d32-c8a8-4680-9d31-36d34d2f552a.png" alt="Databasers Logo" />
+  <img src="https://github.com/IanReisDatabasers/ReunioesDatabasers/blob/main/src/Databasers%20Logo.png" alt="Databasers Logo" />
   <h1>Atas de Reunião - Painel: <span id="tituloPainel"></span></h1>
 </header>
 
