--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
 
 <header>
-  <img src="https://github.com/IanReisDatabasers/ReunioesDatabasers/blob/main/src/Databasers%20Logo.png" alt="Databasers Logo" />
+  <img src="https://github.com/IanReisDatabasers/ReunioesDatabasers/blob/main/src/Databasers%20Logo.png" alt="Databasers Logo.png" />
   <h1>Atas de Reunião - Painel: <span id="tituloPainel"></span></h1>
 </header>
 
