--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
 
 <video autoplay muted loop id="bgVideo" class="video-background">
-  <source src="background.mp4" type="video/mp4">
+  <source src="background_heroArea_home.mp4" type="video/mp4">
   Seu navegador não suporta vídeos HTML5.
 </video>
 
