--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
 </head>
 <body>
 
-<video autoplay muted loop id="bgVideo" class="video-background">
-  <source src="background_heroArea_home.mp4" type="video/mp4">
-  Seu navegador não suporta vídeos HTML5.
+<video autoplay muted loop class="videoHero">
+  <source src="/src/background_heroArea_home.mp4" type="video/mp4">
+  Your browser does not support the video tag.
 </video>
+<div class="videoOverlay"></div>
 
 <header>
   <img src="logotipoDatabasersWhite.svg" alt="Databasers Logo" />
