--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 </head>
 <body>
 <video autoplay muted loop id="bgVideo" class="video-background">
-  <source src="background_heroArea_home.mp4" type="video/mp4">
+  <source src="src/background_heroArea_home.mp4" type="video/mp4">
   Seu navegador não suporta vídeos HTML5.
 </video>
 
 <header>
-  <img src="logotipoDatabasersWhite.svg" alt="Databasers Logo" />
+  <img src="src/logotipoDatabasersWhite.svg" alt="Databasers Logo" />
   <h1>Atas de Reunião - Painel: <span id="tituloPainel"></span></h1>
 </header>
 
