--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
       margin-bottom: 10px;
     }
 
-    h1 {
-      color: #a7c0e8;
-      font-size: 2.5em;
-      margin-bottom: 10px;
-      font-weight: bold;
-      text-shadow: 1px 1px 3px #001d3d;
-    }
+   h1 {
+  color: #0a2a66; /* Azul mais escuro */
+  font-size: 2.5em;
+  margin-bottom: 10px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px #001d3d;
+}
 
-    label, select {
-      font-size: 1.2em;
-      margin-bottom: 20px;
-      display: block;
-      color: #c2d3f7;
-    }
+label {
+  font-size: 1.2em;
+  margin-bottom: 20px;
+  display: block;
+  color: #0a2a66; /* Azul mais escuro */
+}
 
     select {
       padding: 8px;
