--- a/index.html
+++ b/index.html
@@ -38,20 +38,21 @@
       margin-bottom: 10px;
     }
 
-   h1 {
-  color: #0a2a66; /* Azul mais escuro */
-  font-size: 2.5em;
-  margin-bottom: 10px;
-  font-weight: bold;
-  text-shadow: 1px 1px 3px #001d3d;
-}
+    h1 {
+      color: #234a9e; /* azul mais escuro */
+      font-size: 2.5em;
+      margin-bottom: 10px;
+      font-weight: bold;
+      text-shadow: 1px 1px 3px #001d3d;
+    }
 
-label {
-  font-size: 1.2em;
-  margin-bottom: 20px;
-  display: block;
-  color: #0a2a66; /* Azul mais escuro */
-}
+    label {
+      font-size: 1.2em;
+      margin-bottom: 20px;
+      display: block;
+      color: #234a9e; /* azul mais escuro */
+      font-weight: bold;
+    }
 
     select {
       padding: 8px;
@@ -61,6 +62,7 @@ label {
       color: #e0e7f8;
       width: 250px;
       cursor: pointer;
+      font-size: 1.1em;
     }
 
     table {
@@ -112,7 +114,6 @@ label {
   <h1>Atas de Reunião - Painel: <span id="tituloPainel"></span></h1>
 </header>
 
-<!-- Restante do seu código permanece igual -->
 <label for="painelSelect">Selecione o Painel:</label>
 <select id="painelSelect">
   <!-- Opções serão preenchidas pelo JS -->
@@ -121,7 +122,6 @@ label {
 <div id="atasContainer"></div>
 
 <script>
-  // Seu JavaScript existente permanece igual
   const atas = [
     {
       painel: "KPI Gestão Vendas",
