--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
     }
 
     h1 {
-      color: #a7c0e8;
+      color: #234a9e; /* azul mais escuro */
       font-size: 2.5em;
       margin-bottom: 10px;
       font-weight: bold;
       text-shadow: 1px 1px 3px #001d3d;
     }
 
-    label, select {
+    label {
       font-size: 1.2em;
       margin-bottom: 20px;
       display: block;
-      color: #c2d3f7;
+      color: #234a9e; /* azul mais escuro */
+      font-weight: bold;
     }
 
     select {
@@ -61,6 +62,7 @@
       color: #e0e7f8;
       width: 250px;
       cursor: pointer;
+      font-size: 1.1em;
     }
 
     table {
@@ -112,7 +114,6 @@
   <h1>Atas de Reunião - Painel: <span id="tituloPainel"></span></h1>
 </header>
 
-<!-- Restante do seu código permanece igual -->
 <label for="painelSelect">Selecione o Painel:</label>
 <select id="painelSelect">
   <!-- Opções serão preenchidas pelo JS -->
@@ -121,7 +122,6 @@
 <div id="atasContainer"></div>
 
 <script>
-  // Seu JavaScript existente permanece igual
   const atas = [
     {
       painel: "KPI Gestão Vendas",
@@ -206,7 +206,7 @@
     atasContainer.innerHTML = "";
 
     if (atasFiltradas.length === 0) {
-      atasContainer.innerHTML = <p class="no-data">Nenhuma ata encontrada para este painel.</p>;
+      atasContainer.innerHTML = `<p class="no-data">Nenhuma ata encontrada para este painel.</p>`;
       return;
     }
 
@@ -214,7 +214,7 @@
       const divAta = document.createElement("div");
       divAta.style.marginBottom = "40px";
 
-      divAta.innerHTML = 
+      divAta.innerHTML = `
         <table>
           <thead>
             <tr><th colspan="2">Detalhes da Reunião</th></tr>
@@ -231,13 +231,13 @@
             <tr><th>Tópico</th><th>Responsável</th><th>Pontos Tratados</th></tr>
           </thead>
           <tbody>
-            ${ata.topicos.map(t => 
+            ${ata.topicos.map(t => `
               <tr>
                 <td>${t.titulo}</td>
                 <td>${t.responsavel}</td>
-                <td><ul>${t.pontos.map(p => <li>${p}</li>).join("")}</ul></td>
+                <td><ul>${t.pontos.map(p => `<li>${p}</li>`).join("")}</ul></td>
               </tr>
-            ).join("")}
+            `).join("")}
           </tbody>
         </table>
 
@@ -246,7 +246,7 @@
             <tr><th>Ação</th><th>Objetivo</th><th>Responsável</th><th>Estimativa de Tempo</th><th>Prazo de Conclusão</th><th>Retorno para</th></tr>
           </thead>
           <tbody>
-            ${ata.acoes.map(a => 
+            ${ata.acoes.map(a => `
               <tr>
                 <td>${a.acao}</td>
                 <td style="white-space: pre-line;">${a.objetivo}</td>
@@ -255,12 +255,12 @@
                 <td>${formatarData(a.prazo)}</td>
                 <td>${a.retorno}</td>
               </tr>
-            ).join("") || <tr><td colspan="6" style="text-align:center;">Nenhuma ação registrada.</td></tr>}
+            `).join("") || `<tr><td colspan="6" style="text-align:center;">Nenhuma ação registrada.</td></tr>`}
           </tbody>
         </table>
 
         <p><strong>Observações:</strong> ${ata.observacoes || "Nenhuma observação."}</p>
-      ;
+      `;
 
       atasContainer.appendChild(divAta);
     });
