--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         const doc = new jsPDF();
 
         const img = new Image();
-        img.src = 'src/logo.png'; // Substitua por caminho da sua logo em PNG
+        img.src = 'src/logotipoDatabasersWhite.png'; // Substitua por caminho da sua logo em PNG
 
         img.onload = () => {
           const imgWidth = 50;
