--- a/ata.html
+++ b/ata.html
@@ -70,6 +70,12 @@
 </head>
 <body>
   <div class="container">
+
+    <!-- Logo no topo -->
+    <div style="text-align:center; margin-bottom: 20px;">
+      <img src="https://ianreisdatabasers.github.io/ReunioesDatabasers/src/Databasers%20Logo.png" alt="Logo Databasers" width="180">
+    </div>
+
     <h2>Ata de Reunião</h2>
 
     <div class="content">
