--- a/ata.html
+++ b/ata.html
@@ -1,57 +1,79 @@
-<div style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #0D1B2A; color: #ffffff; padding: 40px;">
-  <div style="max-width: 800px; margin: auto; background-color: #1B263B; padding: 30px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5);">
+<table width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#0D1B2A">
+  <tr>
+    <td align="center" style="padding:40px;">
+      <table width="800" cellpadding="0" cellspacing="0" border="0" bgcolor="#1B263B" style="border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5);">
+        <tr>
+          <td style="padding:30px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:#E0E1DD;">
+            
+            <!-- Logo -->
+            <div style="text-align:center; margin-bottom:20px;">
+              <img src="https://ianreisdatabasers.github.io/ReunioesDatabasers/src/Databasers%20Logo.png" 
+                   alt="Logo Databasers" width="180">
+            </div>
 
-    <!-- Logo -->
-    <div style="text-align:center; margin-bottom: 20px;">
-      <img src="https://ianreisdatabasers.github.io/ReunioesDatabasers/src/Databasers%20Logo.png" alt="Logo Databasers" width="180">
-    </div>
+            <h2 style="margin:0; text-align:center;">Ata de Reunião</h2>
 
-    <h2 style="color: #E0E1DD; text-align: center; margin-top: 0;">Ata de Reunião</h2>
+            <p><strong>Data:</strong> 07/07/2025<br>
+               <strong>Horário:</strong> 15:00 (via Microsoft Teams)</p>
 
-    <div style="margin-top: 10px; line-height: 1.6;">
-      <p><strong>Data:</strong> 07/07/2025<br>
-         <strong>Horário:</strong> 15:00 (via Microsoft Teams)</p>
+            <p><strong>Participantes:</strong><br>
+               Carlos Aldecyr Vieira – Calçados Itapuã S/A<br>
+               Ian Gandine – Databasers</p>
 
-      <p><strong>Participantes:</strong><br>
-         Carlos Aldecyr Vieira – Calçados Itapuã S/A<br>
-         Ian Gandine – Databasers</p>
+            <h3 style="color:#A9BCD0; border-bottom:1px solid #415A77; padding-bottom:5px;">
+              1. Assuntos Tratados
+            </h3>
+            <p><strong>1.1 Alinhamento das Tarefas para o Painel "Gestão Compras"</strong></p>
+            <ul>
+              <li>Definido o layout da página <strong>Produtos</strong>.</li>
+              <li>Ajustar os nomes dos campos para caixa alta.</li>
+              <li>Revisar valores das metas para considerar a <strong>Meta Online</strong>.</li>
+            </ul>
 
-      <h3 style="color: #A9BCD0; margin-top: 30px; border-bottom: 1px solid #415A77; padding-bottom: 5px;">1. Assuntos Tratados</h3>
-      <p><strong>1.1 Alinhamento das Tarefas para o Painel "Gestão Compras"</strong></p>
-      <p>Durante a reunião, foram alinhadas todas as alterações referentes ao painel <span style="color: #F5CB5C; font-weight: bold;">“Gestão Compras”</span>, com os seguintes pontos acordados:</p>
-      <ul>
-        <li>Definido o layout da página <strong>Produtos</strong>, com destaque para o posicionamento e visual dos botões.</li>
-        <li>Ajustar os nomes dos campos apresentados na página <strong>Produtos</strong> para caixa alta (maiúsculo).</li>
-        <li>Revisar os valores das metas exibidas, ajustando o cálculo para considerar a <strong>Meta Online</strong>.</li>
-      </ul>
+            <h3 style="color:#A9BCD0; border-bottom:1px solid #415A77; padding-bottom:5px;">
+              2. Próximas Etapas
+            </h3>
+            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse; margin-top:15px;">
+              <tr>
+                <th bgcolor="#0D1B2A" style="padding:10px; color:#fff; border:1px solid #415A77;">Atividade</th>
+                <th bgcolor="#0D1B2A" style="padding:10px; color:#fff; border:1px solid #415A77;">Tempo</th>
+                <th bgcolor="#0D1B2A" style="padding:10px; color:#fff; border:1px solid #415A77;">Responsável</th>
+              </tr>
+              <tr>
+                <td style="padding:10px; color:#E0E1DD; border:1px solid #415A77;">
+                  Ajustar nomes em maiúsculo na página Produtos
+                </td>
+                <td style="padding:10px; color:#E0E1DD; border:1px solid #415A77;">
+                  0.5 horas
+                </td>
+                <td style="padding:10px; color:#E0E1DD; border:1px solid #415A77;">
+                  Ian / Databasers
+                </td>
+              </tr>
+              <tr>
+                <td style="padding:10px; color:#E0E1DD; border:1px solid #415A77;">
+                  Ajustar valores de meta para considerar Meta Online
+                </td>
+                <td style="padding:10px; color:#E0E1DD; border:1px solid #415A77;">
+                  1.5 hora
+                </td>
+                <td style="padding:10px; color:#E0E1DD; border:1px solid #415A77;">
+                  Ian / Databasers
+                </td>
+              </tr>
+            </table>
 
-      <h3 style="color: #A9BCD0; margin-top: 30px; border-bottom: 1px solid #415A77; padding-bottom: 5px;">2. Próximas Etapas</h3>
-      <table style="width: 100%; margin-top: 15px; border-collapse: collapse;">
-        <thead>
-          <tr>
-            <th style="border: 1px solid #415A77; padding: 10px; text-align: left; background-color: #0D1B2A; color: #ffffff;">Atividade</th>
-            <th style="border: 1px solid #415A77; padding: 10px; text-align: left; background-color: #0D1B2A; color: #ffffff;">Tempo Estimado</th>
-            <th style="border: 1px solid #415A77; padding: 10px; text-align: left; background-color: #0D1B2A; color: #ffffff;">Responsável</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td style="border: 1px solid #415A77; padding: 10px; color: #E0E1DD;">Ajustar nomes em maiúsculo na página Produtos</td>
-            <td style="border: 1px solid #415A77; padding: 10px; color: #E0E1DD;">0.5 horas</td>
-            <td style="border: 1px solid #415A77; padding: 10px; color: #E0E1DD;">Ian / Databasers</td>
-          </tr>
-          <tr>
-            <td style="border: 1px solid #415A77; padding: 10px; color: #E0E1DD;">Ajustar valores de meta para considerar Meta Online</td>
-            <td style="border: 1px solid #415A77; padding: 10px; color: #E0E1DD;">1.5 hora</td>
-            <td style="border: 1px solid #415A77; padding: 10px; color: #E0E1DD;">Ian / Databasers</td>
-          </tr>
-        </tbody>
+            <p style="margin-top:30px; font-size:0.95em; color:#B1C9DF;">
+              <strong>Prazo de Entrega:</strong> Até hoje, às 17:30.
+            </p>
+            <p style="font-size:0.95em; color:#B1C9DF;">
+              Caso algo esteja faltando, favor complementar.
+            </p>
+            <p style="font-size:0.95em; color:#B1C9DF;">Atenciosamente,<br>Ian Gandine</p>
+
+          </td>
+        </tr>
       </table>
-
-      <p style="margin-top: 30px; font-size: 0.95em; color: #B1C9DF;"><strong>Prazo de Entrega das Atividades:</strong> Até hoje, às 17:30.</p>
-      <p style="font-size: 0.95em; color: #B1C9DF;">Caso algo esteja faltando nessa ata, favor complementar.</p>
-      <p style="font-size: 0.95em; color: #B1C9DF;">Atenciosamente,<br>Ian Gandine</p>
-    </div>
-
-  </div>
-</div>
+    </td>
+  </tr>
+</table>
