--- a/ata.html
+++ b/ata.html
@@ -7,7 +7,7 @@
             
             <!-- Logo -->
             <div style="text-align:center; margin-bottom:20px;">
-              <img src="https://ianreisdatabasers.github.io/ReunioesDatabasers/src/Databasers%20Logo.png" 
+              <img src="https://ianreisdatabasers.github.io/ReunioesDatabasers/src/logotipoDatabasersWhite.svg" 
                    alt="Logo Databasers" width="180">
             </div>
 
