--- a/ata.html
+++ b/ata.html
@@ -23,8 +23,7 @@
             <h3 style="color:#A9BCD0; border-bottom:1px solid #415A77; padding-bottom:5px;">
               1. Assuntos Tratados
             </h3>
-            <p><strong>1.1 Alinhamento das Tarefas para o Painel 
-              <span style="color:#FFD700;">"Gestão Compras"</span></strong></p>
+            <p><strong>1.1 Alinhamento das Tarefas para o Painel </strong><strong><span style="color:#FFD700;">"Gestão Compras"</span></strong></p>
             <ul>
               <li>Definido o layout da página <strong>Produtos</strong>.</li>
               <li>Ajustar os nomes dos campos para caixa alta.</li>
