--- a/ata.html
+++ b/ata.html
@@ -7,7 +7,7 @@
             
             <!-- Logo -->
             <div style="text-align:center; margin-bottom:20px;">
-              <img src="https://ianreisdatabasers.github.io/ReunioesDatabasers/src/logotipoDatabasersWhite.svg" 
+              <img src="https://ianreisdatabasers.github.io/ReunioesDatabasers/src/logotipoDatabasersWhite.svg"
                    alt="Logo Databasers" width="180">
             </div>
 
@@ -23,7 +23,10 @@
             <h3 style="color:#A9BCD0; border-bottom:1px solid #415A77; padding-bottom:5px;">
               1. Assuntos Tratados
             </h3>
-            <p><strong>1.1 Alinhamento das Tarefas para o Painel </strong><strong><span style="color:#FFD700;">"Gestão Compras"</span></strong></p>
+            <p>
+              <strong>1.1 Alinhamento das Tarefas para o Painel </strong>
+              <span style="color:#FFD700;"><strong>"Gestão Compras"</strong></span>
+            </p>
             <ul>
               <li>Definido o layout da página <strong>Produtos</strong>.</li>
               <li>Ajustar os nomes dos campos para caixa alta.</li>
@@ -69,7 +72,9 @@
             <p style="font-size:0.95em; color:#B1C9DF;">
               Caso algo esteja faltando, favor complementar.
             </p>
-            <p style="font-size:0.95em; color:#B1C9DF;">Atenciosamente,<br>Ian Gandine</p>
+            <p style="font-size:0.95em; color:#B1C9DF;">
+              Atenciosamente,<br>Ian Gandine
+            </p>
 
           </td>
         </tr>
